// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DuplicatesTabButton renders correctly 1`] = `

<gui-tabs-trigger
  value="duplicates"
  variant="nestedCard"
>
  Duplicates
</gui-tabs-trigger>

`;

exports[`DuplicatesTabButton renders with a count 1`] = `

<gui-tabs-trigger
  value="duplicates"
  variant="nestedCard"
>
  Duplicates
  <gui-data-badge
    variant="count"
    classnames="[object Object]"
    content="2"
  >
  </gui-data-badge>
</gui-tabs-trigger>

`;

exports[`DuplicatesTabContent renders with an empty state 1`] = `

<gui-tabs-content
  value="duplicates"
  style="opacity: 0; filter: blur(2px);"
>
  <gui-empty-state
    icon="gui-blocks-icon"
    message="No duplicated dependencies found."
  >
  </gui-empty-state>
</gui-tabs-content>

`;

exports[`DuplicatesTabContent renders with duplicated deps 1`] = `

<gui-tabs-content
  value="duplicates"
  style="opacity: 0; filter: blur(2px);"
>
  <div class="px-6 pt-4">
    <div class="relative flex w-full cursor-default flex-col gap-2 rounded-sm border-[1px] border-muted bg-secondary/30 px-3 py-3">
      <p class="font-regular text-xs tracking-wide text-muted-foreground">
        Packages with multiple versions
      </p>
      <p class="font-mono text-2xl font-medium tabular-nums text-foreground">
        2
        <span class="ml-0.5 text-muted-foreground/80">
          /
        </span>
      </p>
    </div>
    <div class="mt-4 grid grid-cols-3 gap-3 pb-4">
      <div class="flex h-fit flex-col rounded-lg border-[1px] border-muted">
        <div
          role="button"
          class="duration-250 flex h-fit cursor-default items-start gap-2 border-b-[1px] border-muted px-3 py-3 transition-colors hover:bg-secondary/60"
        >
          <gui-data-badge
            variant="count"
            content="2"
          >
          </gui-data-badge>
          <p class="text-sm font-medium text-foreground">
            next
          </p>
        </div>
        <ul class="flex flex-col">
          <li
            role="button"
            class="duration-250 cursor-default px-3 py-2 font-mono text-sm font-medium tabular-nums text-muted-foreground transition-colors last-of-type:rounded-b-md hover:bg-secondary/60 hover:text-foreground"
          >
            v12.0.0
          </li>
          <li
            role="button"
            class="duration-250 cursor-default px-3 py-2 font-mono text-sm font-medium tabular-nums text-muted-foreground transition-colors last-of-type:rounded-b-md hover:bg-secondary/60 hover:text-foreground"
          >
            v12.1.0
          </li>
        </ul>
      </div>
      <div class="flex h-fit flex-col rounded-lg border-[1px] border-muted">
        <div
          role="button"
          class="duration-250 flex h-fit cursor-default items-start gap-2 border-b-[1px] border-muted px-3 py-3 transition-colors hover:bg-secondary/60"
        >
          <gui-data-badge
            variant="count"
            content="3"
          >
          </gui-data-badge>
          <p class="text-sm font-medium text-foreground">
            react
          </p>
        </div>
        <ul class="flex flex-col">
          <li
            role="button"
            class="duration-250 cursor-default px-3 py-2 font-mono text-sm font-medium tabular-nums text-muted-foreground transition-colors last-of-type:rounded-b-md hover:bg-secondary/60 hover:text-foreground"
          >
            v17.0.2
          </li>
          <li
            role="button"
            class="duration-250 cursor-default px-3 py-2 font-mono text-sm font-medium tabular-nums text-muted-foreground transition-colors last-of-type:rounded-b-md hover:bg-secondary/60 hover:text-foreground"
          >
            v18.0.0
          </li>
          <li
            role="button"
            class="duration-250 cursor-default px-3 py-2 font-mono text-sm font-medium tabular-nums text-muted-foreground transition-colors last-of-type:rounded-b-md hover:bg-secondary/60 hover:text-foreground"
          >
            v18.1.0
          </li>
        </ul>
      </div>
    </div>
  </div>
</gui-tabs-content>

`;
